# multiagent-urban-heat-planning

./: .gitignore  Dockerfile  HANDOFF.md  README.md  agent_cycle_findings.md  description_project.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_orch.py  verify_cleanup.py
Important/: agent_functions.md.resolved  walkthrough.md.resolved  walkthrough2.md.resolved
Kimi_Agent_Agent Swarm Orchestration/: 00_BRANITZ2_MASTER_INDEX.md  branitz2_algorithms.md  branitz2_demo_quickref.md  branitz2_demo_script.md  branitz2_diagrams.md  branitz2_presentation_script.md  branitz2_qa_database.md  branitz2_validation_evidence.md
Legacy/: test_safety_validator_st010.py
data/: 2026-04-28-Project1.xlsx
docs/: CHAPTER_4_1_STUDY_AREA_AND_DATA.md  FRAUNHOFER_INTEGRATION.md  INTEGRATION_GUIDE.md  PHASE1_INTENT_AWARE_ARCHITECTURE.md  PROJECT_STATUS_TOP_TO_BOTTOM.md  agent_definitions.md  checklist_feb.md  checklist_feb_agent_Hierarchi.md
figures/: fig_3_11_trunk_spur_topology.py  fig_3_16_lcoh_cashflow.aux  fig_3_16_lcoh_cashflow.py  fig_3_16_lcoh_cashflow.tex  fig_3_17_lhs_vs_random.py  fig_3_17_lhs_vs_random.tex  fig_3_4_monte_carlo_seed_control.py  fig_3_5_lazy_execution_cache.mmd  fig_3_5_lazy_execution_cache.py  fig_3_6_five_layer_architecture.py  fig_3_7_six_agent_pipeline.py  fig_3_8_five_gate_decision.py  fig_3_9_kpi_contract_boundary.py  fig_3_9_kpi_contract_boundary.tex  generate_lhs_random_real_data.py  lhs_500_corr.csv  random_500_corr.csv
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: cleanup_repo.py  deploy.sh  generate_demo_data.py
tests/: ai_safety_results.json  test_ai_safety.py  (+6 more)
(+110 files in other folders)
