[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "branitz-heat-decision"
version = "0.1.0"
description = "Multi-Agent AI System for Climate-Neutral Urban Heat Planning"
authors = [{name = "Ishantha Hewaratne", email = "ishantha.hewaratne@ieg.fraunhofer.de"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

[project.scripts]
branitz-validate-bundle = "branitz_heat_decision.cli.validate_bundle:main"

[project.urls]
Homepage = "https://github.com/ieg-fraunhofer/branitz-heat-decision"
Repository = "https://github.com/ieg-fraunhofer/branitz-heat-decision"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
# Phase 5 focus: enforce typing on decision + UHDC + CLIs first.
# The CHA/DHA/Economics subpackages can be brought under mypy incrementally.
files = [
    "src/branitz_heat_decision/decision",
    "src/branitz_heat_decision/uhdc",
    "src/branitz_heat_decision/cli/decision.py",
    "src/branitz_heat_decision/cli/uhdc.py",
]
exclude = "(^|/)(cha|dha|economics)(/|$)"

